--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <title>Understanding Typescript</title>
     <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <input type="text" class="user-input" />
+  </body>
 </html>
